test/e2e/chainsaw/gateway/stream-listen-options/04-gatewayconfiguration-no-reuseport.yaml
# GatewayConfiguration setting a KONG_STREAM_LISTEN without the reuseport option.
# The operator must drop reuseport (it is user-controlled), keeping only the port
# and the ssl token it enforces.
apiVersion: gateway-operator.konghq.com/v2beta1
kind: GatewayConfiguration
metadata:
  name: (join('-', [($test_name), 'gateway-configuration']))
  namespace: ($namespace)
spec:
  dataPlaneOptions:
    deployment:
      podTemplateSpec:
        spec:
          containers:
            - name: proxy
              image: ($gateway_image)
              env:
                - name: KONG_STREAM_LISTEN
                  value: "[::]:8899 ssl"
              readinessProbe:
                failureThreshold: 3
                initialDelaySeconds: 1
                periodSeconds: 1
                successThreshold: 1
                timeoutSeconds: 1
                httpGet:
                  path: /status/ready
                  port: 8100
                  scheme: HTTP
